--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			<h3 class="viloyatlar-heading">VILOYATLAR RO'YXATI</h3>
 			<ul class="viloyatlar-list">
 				<li class="viloyatlar-item">
-					<a href="">1) Andijon viloyati</a>
+					<a class="viloyatlar-link" href="">1) Andijon viloyati</a>
 				</li>
 				<li class="viloyatlar-item">
 					<a class="viloyatlar-link" href="">2) Farg'ona viloyati</a>
